k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: taskmanager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx  # Use the name of the valid IngressClass
  rules:
  - http:
      paths:
      - path: /frontend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
        backend:
          service:
            name: backend
            port:
              number: 5001


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   namespace: taskmanager
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /frontend(/|$)(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 3000
#           - path: /backend(/|$)(.*)
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: backend
#                 port:
#                   number: 5001
